--- a/client/lab_3/styles.css
+++ b/client/lab_3/styles.css
@@ -1,1 +1,121 @@
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
 
+.wrapper {
+	display:flex;
+	flex-direction: column;
+	font-family: 'Segoe UI', Candara, 'Bitsteam Vera Sans', 'DejaVu Sans', 'Bitsteam Vera Sans', 'Trebuchet MS', Verdana, ‘Verdana Ref’, sans-serif;
+	margin: 10px;
+}
+
+.title{
+	display: inline-block;
+	background-color: rgba(0,139, 139, 0.8);
+	border-radius: 4px;
+	padding: 10px 15px;
+	margin: 0;
+	margin-bottom: 5px;
+}
+.menu-container {
+	color: #fff;
+	background-color: #5995DA;	/* Blue */
+	padding: 20px 0;
+	display: flex;
+	justify-content: center;
+}
+
+.menu {
+	border: 1px solid #fff;
+	width: 900px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.links {
+	border: 1px solid #fff; /* For Debugging*/
+	display: flex;
+	justify-content: flex-end;
+}
+
+.login {
+	margin-left: 20px;
+}
+
+.header-container {
+	color: #5995DA;
+	background-color: #D6E9FE;
+	display: flex;
+	justify-content: center;
+}
+
+.header {
+	width: 900px;
+	height: 300px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.photo-grid-container {
+	display: flex;
+	justify-content: center;
+}
+
+.photo-grid {
+	width: 900px;
+	display: flex;
+	justify-content: center;
+	flex-wrap: wrap;
+	flex-direction: row;
+	align-items: center;
+}
+
+.photo-grid-item {
+	border: 1px solid #fff;
+	width: 300px;
+	height: 300px;
+}
+
+.first-item {
+	order: 1;
+}
+
+.last-item {
+	order: -1;
+}
+
+.social,
+.subscribe {
+	align-self: flex-end;
+	margin-bottom: 20px;
+}
+
+.footer {
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer-item {
+	border: 1px solid #fff;
+	background-color: #D6E9FE;
+	height: 200px;
+	flex: 1;
+}
+
+.footer-three {
+	flex: 2;
+}
+
+.footer-one,
+.footer-three {
+	background-color: #5995DA;
+	flex: initial;
+	width: 300px;
+}
+
+.signup {
+	margin-left: auto;
+}
