--- a/client/lab_3/styles.css
+++ b/client/lab_3/styles.css
@@ -9,6 +9,8 @@
 	flex-direction: column;
 	font-family: 'Segoe UI', Candara, 'Bitsteam Vera Sans', 'DejaVu Sans', 'Bitsteam Vera Sans', 'Trebuchet MS', Verdana, ‘Verdana Ref’, sans-serif;
 	margin: 10px;
+	margin: 0;
+s
 }
 
 .title{
@@ -18,6 +20,8 @@
 	padding: 10px 15px;
 	margin: 0;
 	margin-bottom: 5px;
+	margin: 0;
+
 }
 .menu-container {
 	color: #fff;
@@ -25,6 +29,7 @@
 	padding: 20px 0;
 	display: flex;
 	justify-content: center;
+	
 }
 
 .menu {
@@ -32,6 +37,7 @@
 	width: 900px;
 	display: flex;
 	justify-content: space-between;
+	
 }
 
 .links {
