--- a/client/lab_5/styles.css
+++ b/client/lab_5/styles.css
@@ -9,7 +9,7 @@ body {
   padding: 0;
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
     ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
-  background-color: darkslategray;
+  background-color: rgb(21, 95, 207);
 }
 
 /* Page Layout */
