Lab 5 changes to the field inputs and CSS

--- a/client/lab_5/styles.css
+++ b/client/lab_5/styles.css
@@ -10,6 +10,11 @@ body {
   font-family: ‘Segoe UI’, Candara, ‘Bitstream Vera Sans’, ‘DejaVu Sans’,
     ‘Bitsream Vera Sans’, ‘Trebuchet MS’, Verdana, ‘Verdana Ref’, sans-serif;
   background-color: rgb(21, 95, 207);
+  min-height: 100%;
+}
+
+html {
+  height: 100%;
 }
 
 .columns {
@@ -19,7 +24,9 @@ body {
 
 .wrapper {
   display: flex;
+  margin: 100px;
 }
+
 .container {
   max-width: 960px;
   margin-top: 25px;
